<resources>
    <string name="app_name">log_in</string>
    <string name="Login">Login</string>
    <string name="or_connect_with">or connect with</string>
    <string name="By_signing_in_you_are_agreeing_our_Term_and_privacy_policy">By signing in you are agreeing our Term and privacy policy</string>
    <string name="Register">Register</string>
    <string name="Email_Address">Email Address</string>
    <string name="Remember_password">Remember password</string>
    <string name="Forget_password">Forget password</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="button_login">Login</string>

</resources>