<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="63dp"
        android:fontFamily="@font/majalla"
        android:lineHeight="56sp"
        android:shadowColor="#000000"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv2"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/majalla"
        android:lineHeight="35sp"
        android:text="@string/By_signing_in_you_are_agreeing_our_Term_and_privacy_policy"
        android:textAlignment="center"
        android:textColor="#6B5E5E"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/tv1"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/majalla"
        android:lineHeight="35sp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#036BB9"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/tv2"
        app:layout_constraintTop_toBottomOf="@id/tv2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/majalla"
        android:lineHeight="35sp"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="#A6A6A6"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/tv2"
        app:layout_constraintTop_toBottomOf="@id/tv2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgEmailH"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/majalla"
        android:hint="@string/Email_Address"
        android:lineHeight="35sp"
        android:textColor="#A6A6A6"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgPassH"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgEmailH" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/majalla"
        android:hint="@string/Password"
        android:lineHeight="35sp"
        android:textColor="#A6A6A6"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgMatH"
        android:layout_width="33dp"
        android:layout_height="18dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="45dp"
        android:src="@drawable/mat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgEmailH" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chkCheck"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/majalla"

        android:lineHeight="29sp"
        android:text="@string/Remember_password"
        android:textColor="#6B5E5E"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPassH" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForget"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/majalla"

        android:lineHeight="29.33sp"
        android:text="@string/Forget_password"
        android:textColor="#0386D0"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPassH" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bo_tron_button"
        android:shadowRadius="4"
        android:text="@string/button_login"
        android:textAllCaps="false"
        android:textColor="#FFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/majalla"
        android:lineHeight="35sp"
        android:text="@string/or_connect_with"
        android:textColor="#747070"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgFacebok"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgInts"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ints"
        app:layout_constraintEnd_toStartOf="@id/imgPrints"
        app:layout_constraintStart_toEndOf="@id/imgFacebok"
        app:layout_constraintTop_toBottomOf="@id/tv3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgPrints"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/prints"
        app:layout_constraintEnd_toStartOf="@id/imgIn"
        app:layout_constraintStart_toEndOf="@id/imgInts"
        app:layout_constraintTop_toBottomOf="@id/tv3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgIn"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="92dp"
        android:src="@drawable/in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgTouch"
        android:layout_width="69dp"
        android:layout_height="72dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bo_tron_touch"
        android:src="@drawable/touch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgFacebok" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>